# proto-plugin-poetry

./: .gitignore  .prototools  CHANGELOG.md  Cargo.toml  README.md  cog.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src/: proto.rs
tests/: download_test.rs
