[package]
name = "poetry_plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
extism-pdk = "1.3.0"
moon_pdk = "0.0.10"
proto_pdk = "0.25.2"
regex = { version = "1.11.1", default-features = false, features = ["std"] }
rustc-hash = "2.0.0"

[dev-dependencies]
proto_pdk_test_utils = { version = "0.30.3" } 
starbase_sandbox = "0.7.4"
tokio = { version = "1.41.0", features = ["full"] }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"

[features]
default = ["wasm"]
wasm = []



